# fern-proxy

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  commitlint.config.js  docker-compose.override.dev.yml  docker-compose.override.repl.yml  docker-compose.yml  package.json
.circleci/: config.yml
.coverage/: .gitkeep
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  config.yml  feature_request_template.md
examples/: README.md  config.toml  docker-compose.yml
fern-authorization/embedded/: Cargo.toml  README.md
fern-authorization/opa/: Cargo.toml  README.md
fern-encryption/embedded/: Cargo.toml  README.md
fern-encryption/vault/: Cargo.toml  README.md
fern-masking/embedded/: Cargo.toml  README.md
fern-masking/embedded/src/: lib.rs  strategies.rs
fern-policy-engine/: Cargo.toml  README.md
fern-proxy/: Cargo.toml  README.md
fern-proxy-interfaces/: Cargo.toml  README.md
fern-proxy-interfaces/src/: lib.rs
fern-proxy/src/: connection.rs  main.rs  pipe.rs  server.rs  shutdown.rs
fern-telemetry/: Cargo.toml  README.md
fern-tokenization/embedded/: Cargo.toml  README.md
fern-wire-protocols/arangodb/: Cargo.toml
fern-wire-protocols/bigquery/: Cargo.toml
fern-wire-protocols/bolt/: Cargo.toml  LICENSE
fern-wire-protocols/dgraph/: Cargo.toml
fern-wire-protocols/druidsql/: Cargo.toml
fern-wire-protocols/dynamodb/: Cargo.toml
fern-wire-protocols/firestore/: Cargo.toml
fern-wire-protocols/foundationdb/: Cargo.toml
fern-wire-protocols/graphql/: Cargo.toml
fern-wire-protocols/memcached/: Cargo.toml  README.md
fern-wire-protocols/mongodb/: Cargo.toml
fern-wire-protocols/mysql/: Cargo.toml
fern-wire-protocols/ngql/: Cargo.toml
fern-wire-protocols/postgresql/: Cargo.toml  README.md
fern-wire-protocols/postgresql/src/: lib.rs
fern-wire-protocols/postgresql/src/codec/: backend.rs  frontend.rs  mod.rs
fern-wire-protocols/postgresql/tests/: decode_backend.rs  decode_frontend.rs  encode_backend.rs  encode_frontend.rs
fern-wire-protocols/postgresql/tests/common/: mod.rs
fern-wire-protocols/redis/: Cargo.toml
fern-wire-protocols/reql/: Cargo.toml
fern-wire-protocols/s3/: Cargo.toml
fern-wire-protocols/s3/src/: lib.rs
fern-wire-protocols/snowflake/: Cargo.toml
fern-wire-protocols/trino/: Cargo.toml
