# SPDX-FileCopyrightText:  Copyright © 2022 The Fern Authors <team@fernproxy.io>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fern-proxy-interfaces"
license = "Apache-2.0"
version = "0.1.0"
documentation = "https://docs.rs/fern-proxy-interfaces/0.0.0/"
repository = "https://github.com/fern-proxy/fern-proxy/"
homepage = "https://fernproxy.io/"
description = "Interfaces definitions used by Fern proxy components."
rust-version = "1.63"
edition = "2021"
keywords = ["fern", "proxy", "interfaces"]
authors = [
    "Piotr PAWLICKI <piotrek@seovya.net>",
]

# Not yet :-)
publish = false
# When releasing to crates.io:
# * remove `path` dependencies
# * update documentation URLs
#   -> Cargo.toml
#   -> README.md
# * update CHANGELOG.md
# * create "vMAJOR.MINOR.PATCH" git tag (https://semver.org/)


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-trait]
version = "0.1"

[dependencies.config]
features = ["yaml"]
version = "0.13"
