# SPDX-FileCopyrightText:  Copyright © 2022 The Fern Authors <team@fernproxy.io>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fern-proxy"
license = "Apache-2.0"
version = "0.1.1"
documentation = "https://docs.rs/fern-proxy/0.1.1/"
repository = "https://github.com/fern-proxy/fern-proxy/"
homepage = "https://fernproxy.io/"
description = "Cloud Native high performance security and privacy SQL proxy."
rust-version = "1.63"
edition = "2021"
categories = ["network-programming"]
keywords = ["fern", "proxy", "database", "security", "privacy"]
authors = [
    "Piotr PAWLICKI <piotrek@seovya.net>",
]

# Not yet :-)
publish = false
# When releasing to crates.io:
# * remove `path` dependencies
# * update documentation URLs
#   -> Cargo.toml
#   -> README.md
# * update CHANGELOG.md
# * create "vMAJOR.MINOR.PATCH" git tag (https://semver.org/)


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fern-masking]
features = []
version = "0.1"
path = "../fern-masking/embedded/"

[dependencies.fern-proxy-interfaces]
features = []
version = "0.2"
path = "../fern-proxy-interfaces/"

[dependencies.fern-protocol-postgresql]
features = []
version = "0.1"
path = "../fern-wire-protocols/postgresql/"

[dependencies.config]
default-features = false
features = ["toml"]
version = "0.13"

[dependencies.env_logger]
version = "0.9"

[dependencies.futures]
version = "0.3"

[dependencies.log]
features = ["release_max_level_info"]
version = "0.4"

[dependencies.tokio]
features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"]
version = "1"

[dependencies.tokio-util]
features = ["codec"]
version = "0.7"
