# SPDX-FileCopyrightText:  Copyright © 2022 The Fern Authors <team@fernproxy.io>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fern-masking"
license = "Apache-2.0"
version = "0.1.2"
documentation = "https://docs.rs/fern-masking/0.1.2/"
repository = "https://github.com/fern-proxy/fern-proxy/"
homepage = "https://fernproxy.io/"
description = "Embedded data masking handlers for Fern proxy."
rust-version = "1.63"
edition = "2021"
categories = ["cryptography", "data-structures"]
keywords = ["fern", "proxy", "database", "privacy", "masking"]
authors = [
    "Piotr PAWLICKI <piotrek@seovya.net>",
]

# Not yet :-)
publish = false
# When releasing to crates.io:
# * remove `path` dependencies
# * update documentation URLs
#   -> Cargo.toml
#   -> README.md
# * update CHANGELOG.md
# * create "vMAJOR.MINOR.PATCH" git tag (https://semver.org/)


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO(ppiotr3k): this crate should work on abstractions only - refactor to remove this
[dependencies.fern-protocol-postgresql]
features = []
version = "0.1"
path = "../../fern-wire-protocols/postgresql/"

[dependencies.fern-proxy-interfaces]
features = []
version = "0.2"
path = "../../fern-proxy-interfaces/"

[dependencies.async-trait]
version = "0.1"

[dependencies.bytes]
version = "1"

[dependencies.log]
features = []
version = "0.4"
