# SPDX-FileCopyrightText:  Copyright © 2022 The Fern Authors <team@fernproxy.io>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fern-protocol-postgresql"
license = "Apache-2.0"
version = "0.1.0"
documentation = "https://docs.rs/fern-protocol-postgresql/0.1.0/"
repository = "https://github.com/fern-proxy/fern-proxy/"
homepage = "https://fernproxy.io/"
description = "PostgreSQL wire protocol implementation as needed by Fern proxy."
rust-version = "1.63"
edition = "2021"
categories = ["network-programming", "data-structures", "encoding"]
keywords = ["fern", "proxy", "database", "protocol", "postgres", "postgresql"]
authors = [
    "Piotr PAWLICKI <piotrek@seovya.net>",
]

# Not yet :-)
publish = false
# When releasing to crates.io:
# * remove `path` dependencies
# * update documentation URLs
#   -> Cargo.toml
#   -> README.md
# * update CHANGELOG.md
# * create "vMAJOR.MINOR.PATCH" git tag (https://semver.org/)


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio-util]
features = ["codec"]
version = "0.7"

[dependencies.bytes]
version = "1"

[dependencies.log]
features = ["release_max_level_info"]
version = "0.4"

[dependencies.fern-proxy-interfaces]
features = []
version = "0.1"
path = "../../fern-proxy-interfaces"


[dev_dependencies.tokio]
features = []
version = "1"

[dev_dependencies.test-log]
features = ["log"]
version = "0.2"

[dev_dependencies.env_logger]
version = "*"
